cargo-features = ["edition2024"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
authors = ["Qin-shihuang <0.0@owo.li>"]

[dependencies]
arch = { path = "../crates/arch" }
sbi = { path = "../crates/sbi" }
sync = { path = "../crates/sync" }
allocator = { path = "../crates/allocator" }

bitflags = "2.6.0"
log = "0.4.14"
riscv = "0.11.1"
xmas-elf = "0.9.1"
rustc-demangle = "0.1.24"

[features]
default = ["qemu", "smp"]

qemu = []
smp = []
print_symbol = []
