[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
authors = ["Qin-shihuang <0.0@owo.li>"]
build = "../build.rs"

[dependencies]
arch = { path = "../crates/arch" }
fs = { path = "../crates/fs" , features = ["lib"] }
sbi = { path = "../crates/sbi" }
sync = { path = "../crates/sync" }
allocator = { path = "../crates/allocator" }

bitflags = "2.6.0"
log = "0.4.14"
riscv = "0.12.1"
xmas-elf = "0.10.0"
rustc-demangle = "0.1.24"
fdt = "0.1.5"

[features]
default = ["qemu", "smp"]

qemu = []
smp = []
print_symbol = []
